# GameEngineWithCMake

./: .gitmodules
GameEngine/: CMakeLists.txt
GameEngine/Engine/: CMakeLists.txt
GameEngine/Engine/VIEngine/: pch.h
GameEngine/Engine/VIEngine/Window/: GLFWPlatformWindow.cpp  WindowPlatform.cpp
GameEngine/Engine/VIEngine/core/: Application.cpp  Application.h  entry.h
GameEngine/Engine/VIEngine/core/logger/: logger.cpp  logger.h
GameEngine/Game/: CmakeLists.txt
GameEngine/Game/Source/: Game.cpp
GameEngine/Vendors/include/glad/: gl.h
